Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBooleanTextWrapped.quorum
class main
    action main
        text t = "Something!"
        boolean b = t
    end
end